# redis

./: LICENSE  Makefile.in  PackageInfo.g  README.md  configure  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
gap/: redis.gd  redis.gi
src/: redis.c
tst/: testall.g
